--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,82 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+/* App.css */
+* {
+  width: 100%;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body, html {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+/* Assurez-vous que le header prend toute la largeur */
+.header {
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 3rem;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+}
+
+/* Styliser l'écran des items */
+.itemScreen {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 20px;
+}
+
+.itemImage {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 4px; 
+}
+
+/* Carte pour chaque fromage */
+.cheeseCard {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 300px; /* ou une autre taille selon votre besoin */
+  margin: 20px;
+}
+
+.cheeseCard img {
+  width: 100%;
+  height: auto;
+}
+
+.cheeseCard h3 {
+  margin: 10px;
+}
+
+/* Bouton de connexion */
+button {
+  width: 8rem;
+  padding: 10px 20px;
+  cursor: pointer;
+  background-color: #008cba;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
+
+/* Gestion des messages d'administration et d'erreur */
+div[role="alert"] {
+  color: red;
+  padding: 10px;
+}
+
+/* Utilisez des media queries si nécessaire pour gérer la responsivité */
+@media (max-width: 768px) {
+  .itemScreen {
+    flex-direction: column;
+    align-items: center;
   }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
