--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* App.css */
 * {
   width: 100%;
 }
@@ -10,7 +9,6 @@ body, html {
   height: 100%;
 }
 
-/* Assurez-vous que le header prend toute la largeur */
 .header {
   position: absolute;
   top: 0;
@@ -24,7 +22,6 @@ body, html {
   padding: 20px;
 }
 
-/* Styliser l'écran des items */
 .itemScreen {
   display: flex;
   flex-wrap: wrap;
@@ -39,11 +36,10 @@ body, html {
   border-radius: 4px; 
 }
 
-/* Carte pour chaque fromage */
 .cheeseCard {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
-  width: 300px; /* ou une autre taille selon votre besoin */
+  width: 300px;
   margin: 20px;
 }
 
@@ -56,7 +52,6 @@ body, html {
   margin: 10px;
 }
 
-/* Bouton de connexion */
 button {
   width: 8rem;
   padding: 10px 20px;
@@ -67,16 +62,25 @@ button {
   border-radius: 5px;
 }
 
-/* Gestion des messages d'administration et d'erreur */
 div[role="alert"] {
   color: red;
   padding: 10px;
 }
 
-/* Utilisez des media queries si nécessaire pour gérer la responsivité */
 @media (max-width: 768px) {
   .itemScreen {
     flex-direction: column;
     align-items: center;
   }
+}
+
+.footer{
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border: 1px solid #fff;
+  border-radius: 0.25rem;
+  transition: background-color .3s ease-in-out, color .3s ease-in-out;
 }
